<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_height"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/yourHeight"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/subColor"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/subHeight"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_weight"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/yourWeight"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/subColor"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/subWeight"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_imc_view"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_marginBottom="32dp"
        android:text="@string/imcView"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_click"
        android:layout_width="match_parent"
        android:text="@string/buttonImc"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textStyle="bold"
        android:backgroundTint="@color/buttonColor"/>

</LinearLayout>